fix: styling for sidebar on mobile devices
We just need to give position:initial on mobiles instead of relative
for the stickyness to go away.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -188,7 +188,106 @@ header {
     }
 }
 
-/* Responsive Menu */
+/* Content Header */
+.post-header {
+    a:hover {
+        text-decoration: none;
+    }
+
+    h1 {
+        margin-bottom: 5px;
+        color: #000;
+    }
+
+    h2 {
+        margin-top: 0;
+        text-align: left;
+        border-bottom: 1px solid #BDBDBD;
+    }
+
+    .post-meta {
+        font-family: $subtext-font;
+        font-size: 1em;
+        color: $header-footer-fg;
+
+        .word-count::before, .reading-time::before {
+            content: "\B7";
+        }
+    }
+}
+
+/* Body */
+article {
+    line-height: 1.65em;
+}
+
+blockquote {
+    margin-left: 0;
+    padding-left: 30px;
+    border-left: 6px solid #9E9E9E;
+}
+
+.archives {
+    div {
+        display: inline-block
+    }
+
+    .publish-date {
+        padding-left: 1em;
+        width: 25%;
+    }
+}
+
+/* Right Sidebar */
+.sidebar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    .sticky {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+
+        padding: 2.5px 0 15px;
+    }
+
+    &-item {
+        padding: 15px;
+        font-size: 0.9em;
+        line-height: 1.5em;
+
+        &:not(:first-child) {
+            margin-top: 1.5em;
+            text-align: left;
+        }
+
+        h4 {
+            margin: 0 0 10px;
+            padding-bottom: 5px;
+            text-align: left;
+            border-bottom: 1px solid #BDBDBD;
+        }
+
+        ul {
+            padding-left: 2em;
+        }
+    }
+}
+
+/* Footer */
+footer {
+    padding-top: 15px;
+    height: 5em;
+    text-align: center;
+    background-color: $header-footer-bg;
+    color: $header-footer-fg;
+}
+
+
+/* Responsive */
 @media only screen and (max-width: 767px) {
     header {
         .hamburger {
@@ -268,59 +367,7 @@ header {
             }
         }
     }
-}
 
-/* Content Header */
-.post-header {
-    a:hover {
-        text-decoration: none;
-    }
-
-    h1 {
-        margin-bottom: 5px;
-        color: #000;
-    }
-
-    h2 {
-        margin-top: 0;
-        text-align: left;
-        border-bottom: 1px solid #BDBDBD;
-    }
-
-    .post-meta {
-        font-family: $subtext-font;
-        font-size: 1em;
-        color: $header-footer-fg;
-
-        .word-count::before, .reading-time::before {
-            content: "\B7";
-        }
-    }
-}
-
-/* Body */
-article {
-    line-height: 1.65em;
-}
-
-blockquote {
-    margin-left: 0;
-    padding-left: 30px;
-    border-left: 6px solid #9E9E9E;
-}
-
-.archives {
-    div {
-        display: inline-block
-    }
-
-    .publish-date {
-        padding-left: 1em;
-        width: 25%;
-    }
-}
-
-@media only screen and (max-width: 767px) {
     .archives {
         .publish-date {
             padding-left: 1em;
@@ -330,6 +377,10 @@ blockquote {
         .post-title {
             padding-left: 1em;
         }
+    }
+
+    .sidebar {
+        position: initial;
     }
 }
 
@@ -342,52 +393,4 @@ blockquote {
     .archives > .post-title {
         padding-left: 1em;
     }
-}
-
-/* Right Sidebar */
-.sidebar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    .sticky {
-        position: -webkit-sticky;
-        position: sticky;
-        top: 0;
-
-        padding: 2.5px 0 15px;
-    }
-
-    &-item {
-        padding: 15px;
-        font-size: 0.9em;
-        line-height: 1.5em;
-
-        &:not(:first-child) {
-            margin-top: 1.5em;
-            text-align: left;
-        }
-
-        h4 {
-            margin: 0 0 10px;
-            padding-bottom: 5px;
-            text-align: left;
-            border-bottom: 1px solid #BDBDBD;
-        }
-
-        ul {
-            padding-left: 2em;
-        }
-    }
-}
-
-/* Footer */
-footer {
-    padding-top: 15px;
-    height: 5em;
-    text-align: center;
-    background-color: $header-footer-bg;
-    color: $header-footer-fg;
 }
